--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "author": "ABA",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.41",
     "glob": "^7.1.0",
     "ts-loader": "^0.8.2",
     "typescript": "^2.0.10",
-    "webpack-livereload-plugin": "^0.9.0"
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.37",
     "lodash": "^4.16.4",
     "p5": "^0.5.4"
+  },
+  "scripts": {
+    "wds": "webpack-dev-server",
+    "build": "webpack"
   }
 }
