--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/lodash": "^4.14.41",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
     "glob": "^7.1.0",
-    "ts-loader": "^0.8.2",
     "typescript": "^2.1.4",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
